<resources>
    <string-array name="languages">
        <item>Українська</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="sdk_name">VCheck SDK</string>
    <string name="wrong_move_title">Wrong movement</string>
    <string name="wrong_move_description">The motion that was requested was not executed correctly. Try to do exactly those movements that are requested. Movements should be fluid and timely.</string>
    <string name="wrong_move_repeat_button">Try again</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="choose_country_title">Select the country</string>
    <string name="choose_country_description">Select the country of registration of your document, which should be uploaded in the next step.</string>
    <string name="photo_instructions_title">Document requirements</string>
    <string name="photo_instructions_description">Submitted document must meet the following requirements:</string>
    <string name="photo_instructions_button">Next</string>
    <string name="choose_country_card_title">Country</string>
    <string name="proceed">Continue</string>
    <string name="choose_doc_method_title">Select document type</string>
    <string name="choose_doc_method_description">Select the country of registration of your document, which will need to be photographed during the next step.</string>
    <string name="docMethodForeignPassport">International passport</string>
    <string name="docMethodIdCard">Biometric passport (ID card)</string>
    <string name="docMethodInnerPassport">Internal passport</string>
    <string name="image_color_text">the image must be in color</string>
    <string name="seen_all_text">all protective elements are visible</string>
    <string name="seen_four_corners_text">all 4 corners of the document are fully visible</string>
    <string name="valid_dispatch_text">valid at the time of dispatch</string>
    <string name="no_foreign_objects_text">no foreign objects: covers, fingers, paper clips, etc.</string>
    <string name="original_doc_text">original (not a photocopy, not a photo)</string>
    <string name="make_document_photo_title">Take a photo of a document</string>
    <string name="photo_upload_title_common_forward">Photo of the first page / side of the document (with your photo)</string>
    <string name="photo_upload_title_common_back">Photo of the last page / side with your photo (if you have multiple photos in the document)</string>
    <string name="photo_upload_title_foreign">Full spread of the document with your photo</string>
    <string name="take_photo_title">Take a photo</string>
    <string name="check_filled_data_description">Check if all the data on the document was recognized correctly.</string>
    <string name="check_filled_data_title">Reconciliation / filling of data</string>
    <string name="photo_upload_title_id_card_forward">Front side of the ID card</string>
    <string name="photo_upload_title_id_card_back">Back side of the ID card</string>
    <string name="check_info_confirm_button">That\'s all right! Continue</string>
    <string name="make_document_photo_description">Make sure every photo taken is readable (all 4 corners of the document are visible, fingers are not obstructing the data)</string>
    <string name="photo_upload_title">Upload a photo of the document</string>
    <string name="no_camera_permission_button">Give access to the camera</string>
    <string name="no_camera_title">Webcam not available</string>
    <string name="no_time_button">Try again</string>
    <string name="not_found_button">To home</string>
    <string name="os_not_support_back_button">Back</string>
    <string name="os_not_support_title">Operating system not supported</string>
    <string name="make_photo_button">Take a picture</string>
    <string name="photo_upload_button">Upload a photo</string>
    <string name="success_title">Verification successful</string>
    <string name="look_stratight_error_button">Try again</string>
    <string name="fail_verification_close_button">Close</string>
    <string name="error_title">Something went wrong :(</string>
    <string name="error_button">Reload page</string>
    <string name="confirm_photo_button">Confirm</string>
    <string name="country_name">Country</string>
    <string name="replace_photo_button">Change photo</string>
    <string name="start_demo_flow">Try again</string>
    <string name="machine_print_text">Machine print</string>
    <string name="hand_print_text">Handwritten text</string>
    <string name="check_photo_title">Check your photo</string>
    <string name="fail_verification_support_button">Contact Support…</string>
    <string name="fail_verification_title">Verification failed</string>
    <string name="frame_interference_button">Try again</string>
    <string name="check_photo_title_2">How is the data in the document filled in?</string>
    <string name="photo_upload_wait_disclaimer">Please, wait. The photo of your document is being loaded and processed. This may take from a few seconds to a minute.</string>
    <string name="check_photo_description">Check the readability of the information in the photo. Make sure all 4 corners of the document are visible in the photo.</string>
    <string name="error_description">For some reason, we were unable to load the content of this page. Try reloading the page</string>
    <string name="fail_verification_description">Unfortunately, we were unable to verify your application:  If you do not agree with this decision, please contact support.</string>
    <string name="frame_interference_send_text">Everything was completed correctly, send for verification</string>
    <string name="frame_interference_title">There are a lot of obstacles in the frame</string>
    <string name="in_process_button">Excellent!</string>
    <string name="success_button">Excellent!</string>
    <string name="wrong_move_correct_text">Everything was completed correctly, send for verification</string>
    <string name="photo_upload_description">Acceptable image format: JPG, JPEG</string>
    <string name="os_not_support_copy_button">Сopy link</string>
    <string name="not_found_title">We didn\'t find a page with that address :(</string>
    <string name="look_stratight_error_title">Failed to focus on face</string>
    <string name="no_time_title">The time to complete the movement has expired</string>
    <string name="in_process_title">Your application is already processing</string>
    <string name="no_time_correct_text"><u>Everything was completed correctly, send for verification</u></string>
    <string name="no_camera_link_button">Copy link</string>
    <string name="passport_title">Upload a photo of the front spread (spread with your photo).</string>
    <string name="os_not_support_description">Unfortunately, this mobile OS is not supported. To successfully complete the verification procedure, we recommend that you copy the link below and continue on your personal computer</string>
    <string name="no_time_subtitle">You did not have time to complete the correct movement. Try to strictly adhere to the instructions at the time of the verification. Try again.</string>
    <string name="look_stratight_error_send_text">Everything was completed correctly, send for verification</string>
    <string name="frame_interference_description">There could be several people in the frame, or foreign objects. When re-checking, try so that only your face is in the frame and you can see it as clearly as possible..</string>
    <string name="in_process_subtitle">This may take some time.</string>
    <string name="look_stratight_error_subtitle">The face was not found in the frame. Try to focus the camera so that the face is in the center. Try again.</string>
    <string name="no_camera_description">The camera was not found or you have denied access to it. If the camera works correctly, give access to it and try again. If the problem persists, try to copy the verification link and continue on a different device.</string>
    <string name="success_description">While all application data sent to our services is being processed, you may return to the partner service.</string>
    <string name="face_check_title">Face checking</string>
    <string name="face_check_description">First, place your face in the center of the frame, then perform the requested movements.</string>
    <string name="requested_movements_text">perform only requested movements</string>
    <string name="smooth_movements_text">movements should be clear and smooth</string>
    <string name="no_interference_text">there should be no interference in the frame</string>
    <string name="good_light_text">find a place with good lighting (bright, but no bright lights)</string>
    <string name="fixed_camera_text">fixed camera (try not to move the camera)</string>
    <string name="liveness_start_button">Start</string>
    <string name="choose_method_title">Choose a verification method</string>
    <string name="choose_method_description">To proceed with verification, choose the provider from the list of available for your country.</string>
    <string name="verif_method_title_1" translatable="false">VCHECK</string>
    <string name="verif_method_title_2" translatable="false">Bank ID</string>
    <string name="verif_method_title_3" translatable="false">Дiя</string>
    <string name="doc_field_title">Title</string>
    <string name="verif_method_subtitle_1">Verification with document upload</string>
    <string name="verif_method_subtitle_2">Verification through Ukrainian banks</string>
    <string name="verif_method_subtitle_3">Verification through the ID.GOV.UA platform</string>
    <string name="no_data_placeholder">No data available</string>
    <string name="permissions_denied">To process photo documents and check the face for liveness, you must provide the requested permissions</string>
    <string name="error_make_at_least_one_photo">Please make first photo of the document</string>
    <string name="doc_verification_error_title">Document verification is not successful</string>
    <string name="doc_verification_error_description">Document compliance check failed. Please, download the correct document</string>
    <string name="doc_verif_continue_anyway"><u>I am confident in my document, continue the verification process</u></string>
    <string name="reload_photo">Try again</string>
    <string name="check_doc_fields_validation_error">Some document fields are not properly filled or empty</string>
    <string name="field_validation_error">Validation error: wrong format</string>
    <string name="wait_for_liveness_start">Please, wait</string>
    <string name="unavailable_country">Currently unavailable</string>
    <string name="launch_liveness_demo">Local Liveness Demo</string>
    <string name="application_success">Application success</string>
    <string name="video_upload_error_descr">There was an issue while uploading a video. Please check your internet connection and try again without moving an app to the background.</string>
    <string name="line_face_obstacle">Don\'t look up or down</string>
    <string name="wrong_movement_obstacle">Wrong movement</string>
    <string name="united_states_of_america">United States of America</string>
    <string name="bermuda">Bermuda</string>
    <string name="east_timor">East Timor</string>
    <string name="surname_cyrillic_validation_error">Please enter a valid surname in Cyrillic</string>
    <string name="surname_latin_validation_error">Please enter a valid Latin surname</string>
    <string name="name_cyrillic_validation_error">Please enter a valid name in Cyrillic</string>
    <string name="name_latin_validation_error">Please enter a valid Latin name</string>
    <string name="number_of_document_validation_error">Please enter a valid series and document number</string>
    <string name="yyyymmdd">YYYYMMDD</string>
</resources>