<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#2A2A2A"
    tools:context=".presentation.screens.DocVerificationNotSuccessfulFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="#3C3C3C"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="28dp"
                android:src="@drawable/error_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/doc_verification_error_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_image" />

            <TextView
                android:id="@+id/error_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/doc_verification_error_description"
                android:textColor="#D8D8D8"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/error_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="44dp"
                android:background="@drawable/shape_for_blue_button"
                android:text="@string/reload_photo"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_description" />

            <TextView
                android:id="@+id/pseudoBtnProceedAnyway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doc_verif_continue_anyway"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_button"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>