<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photo_instructions_scroll_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".presentation.photo_upload_stage.PhotoInstructionsFragment"
    android:theme="@style/Theme.VCheckAndroidSDKDemo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photo_instructions_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/vcheck_background_primary">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="28dp"
            app:cardBackgroundColor="@color/vcheck_background_secondary"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/back_arrow"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/photo_instructions_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/photo_instructions_title"
                    android:textColor="@color/vcheck_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/back_arrow" />

                <TextView
                    android:id="@+id/photo_instructions_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/photo_instructions_description"
                    android:textColor="@color/vcheck_text"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/photo_instructions_title" />

                <ImageView
                    android:id="@+id/image_color_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/image_color_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/photo_instructions_description"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/image_color_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/image_color_text"
                    android:textColor="@color/vcheck_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/image_color_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_color_icon"
                    app:layout_constraintTop_toTopOf="@+id/image_color_icon" />

                <ImageView
                    android:id="@+id/seen_all_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/seen_all_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_color_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/seen_all_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/seen_all_text"
                    android:textColor="@color/vcheck_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/seen_all_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/seen_all_icon"
                    app:layout_constraintTop_toTopOf="@+id/seen_all_icon" />

                <ImageView
                    android:id="@+id/seen_four_corners_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/seen_four_corners_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seen_all_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/seen_four_corners_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/const12"
                    android:layout_marginEnd="16dp"
                    android:text="@string/seen_four_corners_text"
                    android:textColor="@color/vcheck_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/seen_four_corners_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/seen_four_corners_icon"
                    app:layout_constraintTop_toTopOf="@+id/seen_four_corners_icon" />

                <ImageView
                    android:id="@+id/valid_dispatch_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/valid_dispatch_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seen_four_corners_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/valid_dispatch_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/valid_dispatch_text"
                    android:textColor="@color/vcheck_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/valid_dispatch_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/valid_dispatch_icon"
                    app:layout_constraintTop_toTopOf="@+id/valid_dispatch_icon" />

                <ImageView
                    android:id="@+id/no_foreign_objects_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/no_foreign_objects_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valid_dispatch_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/no_foreign_objects_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/no_foreign_objects_text"
                    android:textColor="@color/vcheck_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/no_foreign_objects_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/no_foreign_objects_icon"
                    app:layout_constraintTop_toTopOf="@+id/no_foreign_objects_icon" />

                <ImageView
                    android:id="@+id/original_doc_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/original_doc_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/no_foreign_objects_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/original_doc_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/original_doc_text"
                    android:textColor="@color/vcheck_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/original_doc_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/original_doc_icon"
                    app:layout_constraintTop_toTopOf="@+id/original_doc_icon" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/photo_instructions_button"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/photo_instructions_button"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:cornerRadius="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/original_doc_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


