<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".presentation.screens.OsNotSupportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#2A2A2A">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="660dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="48dp"
            app:cardBackgroundColor="#3C3C3C"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/os_not_support_image"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="28dp"
                    android:src="@drawable/os_not_support_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/os_not_support_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:text="@string/os_not_support_title"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/os_not_support_image" />

                <TextView
                    android:id="@+id/os_not_support_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:text="@string/os_not_support_description"
                    android:textColor="#D8D8D8"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/os_not_support_title" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/os_not_support_copy_button"
                    android:layout_width="264dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/shape_for_blue_button"
                    android:text="@string/os_not_support_copy_button"
                    app:layout_constraintBottom_toTopOf="@+id/os_not_support_back_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/os_not_support_back_button"
                    android:layout_width="264dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/outlined_button_shape"
                    android:text="@string/os_not_support_back_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


